@@ -7,24 +7,17 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
 @Slf4j
 public class HttpConnector {
-    private static final String HTTPS_SCHEME = "https";
-
-    public static String sendHttpRequest(String method, String authority, String path, String requestData) throws IOException, URISyntaxException {
+    public static String sendHttpRequest(String method, String url_string, String requestData) throws IOException {
         int responseCode = -1;
         StringBuilder sb = new StringBuilder();
 
         try {
-            URI uri = new URI(HTTPS_SCHEME, authority, path, null);
-            String urlString = uri.toASCIIString();
-
-            URL url = new URL(urlString);
+            URL url = new URL(url_string);
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod(method);
 
@@ -50,9 +43,6 @@ public class HttpConnector {
             return sb.toString();
         } catch (IOException e) {
             log.error("Failed to send HTTP request. Response code: " + responseCode, e);
-            throw e;
-        } catch (URISyntaxException e) {
-            log.error("Invalid URI syntax: " + e.getMessage(), e);
             throw e;
         }
     }
